--- a/src/client/templates/resources.ejs
+++ b/src/client/templates/resources.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <%- include("./components/globals.html"); %>
-    
-    <title>coloors | resources</title>
+  <%- include("./components/globals.ejs"); %>
+
+  <title>coloors | resources</title>
 </head>
+
 <body>
-    <p>resources</p>
+  <p>resources</p>
 </body>
+
 </html>
