--- a/src/client/templates/components/globals.ejs
+++ b/src/client/templates/components/globals.ejs
@@ -4,7 +4,6 @@
 
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎨</text></svg>" />
 
-<link rel="stylesheet" href="/css/globals.css" />
+<link rel="stylesheet" href="/styles/globals.css" />
 
-<script src="/js/app.js" type="module"></script>
 <script src="/js/navigation.js" type="module"></script>
