--- a/src/client/templates/dashboard.ejs
+++ b/src/client/templates/dashboard.ejs
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <%- include("./components/globals.html"); %>
-    
-    <title>coloors | dashboard</title>
+  <%- include("./components/globals.ejs"); %>
 
-    <link rel="stylesheet" href="/css/pages/dashboard.css" />
-    <link rel="stylesheet" href="/css/shared/palette.css" />
+  <title>coloors | dashboard</title>
+
+  <link rel="stylesheet" href="/styles/pages/dashboard.css" />
+  <link rel="stylesheet" href="/styles/palette.css" />
 </head>
+
 <body>
-    <%- include("./components/preloader.html"); %>
+  <%- include("./components/preloader.ejs"); %>
 
-    <div class="wrapper">
-        <%- include("./components/navigation.html"); %>
+  <div class="wrapper">
+    <%- include("./components/navigation.ejs"); %>
 
-        <section class="focus-wrapper">
-            <h1>Color Palettes</h1>
+    <section class="focus-wrapper">
+      <h1>Color Palettes</h1>
 
-            <% if(!locals.palettes.length) { %>
-                <img src="/assets/color_palette.svg" />
+      <% if(!locals.palettes.length) { %>
+      <img src="/media/colorPalette.svg" />
 
-                <p>Looks like you don't have any color palettes! Explore palettes for inspiration or make your own.</p>
+      <p>Looks like you don't have any color palettes! Explore palettes for inspiration or make your own.</p>
 
-                <a href="/generate">
-                    <button class="primary">create palette</button>
-                </a>
-            <% } else { %>
-                <p>Wow, look at all those color palettes! Share them to the world!</p>
-            <% } %>
-        </section>
+      <a href="/generate">
+        <button class="primary">create palette</button>
+      </a>
+      <% } else { %>
+      <p>Wow, look at all those color palettes! Share them to the world!</p>
+      <% } %>
+    </section>
 
-        <section class="palette-wrapper">
-            <% if(locals.palettes) { 
-                for(const palette of locals.palettes) {
-                    const colors = palette.colors.map(c => (
-                        `<div class="color" style="background: ${c}"></div>`
-                    )).join("\n")
-            %>
-                <div class="palette">
-                    <div class="colors">
-                        <%- colors %>
-                    </div>
+    <section class="palette-wrapper">
+      <% if(locals.palettes) { 
+          for(const palette of locals.palettes) {
+              const colors = palette.colors.map(c => (
+                  `<div class="color" style="background: ${c}"></div>`
+              )).join("\n") %>
+      <div class="palette">
+        <div class="colors">
+          <%- colors %>
+        </div>
 
-                    <div class="details">
-                        <p><%- palette.likes %> forks</p>
-                        <a href="/generate/<%= palette.key %>"><ion-icon name="open-outline"></ion-icon></a>
-                    </div>
-                </div>
-            <%  }
-            } %>
+        <div class="details">
+          <p><%- palette.forks %> forks</p>
+          <a href="/generate/<%= palette.key %>">
+            <ion-icon name="open-outline"></ion-icon>
+          </a>
+        </div>
+      </div>
+      <% } } %>
 
-        </section>
+    </section>
 
-        <footer class="empty"></footer>
-    </div>
+    <footer class="empty"></footer>
+  </div>
 </body>
+
 </html>
