--- a/src/client/public/styles/palette.css
+++ b/src/client/public/styles/palette.css
@@ -11,7 +11,9 @@
   padding: 0.75rem;
   overflow: hidden;
   border-radius: 0.5rem;
-  transition: box-shadow 0.2s, transform 0.2s;
+  transition:
+    box-shadow 0.2s,
+    transform 0.2s;
 }
 
 .palette-wrapper .palette:hover {
