[✨] Enable All Routes

--- a/src/client/templates/dashboard.ejs
+++ b/src/client/templates/dashboard.ejs
@@ -35,7 +35,7 @@
     <section class="palette-wrapper">
       <% if(locals.palettes) { 
           for(const palette of locals.palettes) {
-              const colors = palette.colors.map(c => (
+              const colors = palette.colors.split(",").map((c) => (
                   `<div class="color" style="background: ${c}"></div>`
               )).join("\n") %>
       <div class="palette">
