--- a/src/client/templates/components/globals.ejs
+++ b/src/client/templates/components/globals.ejs
@@ -6,4 +6,6 @@
 
 <link rel="stylesheet" href="/styles/globals.css" />
 
-<script src="/js/navigation.js" type="module"></script>
+<script type="module" src="/js/navigation.js" ></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script defer nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
