--- a/src/client/templates/generate.ejs
+++ b/src/client/templates/generate.ejs
@@ -11,7 +11,7 @@
   <script>
     const GENESIS = JSON.parse(`<%- locals.palette ? JSON.stringify(locals.palette.colors) : "[]" %>`)
   </script>
-  <script src="/js/pages/generate.js" type="module"></script>
+  <script type="module" src="/js/pages/generate.js"></script>
 </head>
 
 <body>
