--- a/src/client/templates/index.ejs
+++ b/src/client/templates/index.ejs
@@ -26,7 +26,7 @@
       <% 
         if(locals.palettes) { 
           for(const palette of locals.palettes) {
-            const colors = palette.colors.split(",").map((c) => (
+            const colors = palette.colors.split("|").map((c) => (
               `<div class="color" style="background: ${c}"></div>`
             )).join("\n")
       %>
@@ -38,7 +38,7 @@
 
         <div class="details">
           <p><%- palette.forks %> forks</p>
-          <a href="/generate/<%= palette.key %>">
+          <a href="/generate/<%= palette.id %>">
             <ion-icon name="open-outline"></ion-icon>
           </a>
         </div>
