--- a/src/client/templates/components/navigation.ejs
+++ b/src/client/templates/components/navigation.ejs
@@ -11,7 +11,7 @@
 
     <% if(locals.user) { %>
     <div class="profile">
-      <div class="profile-circle" id="<%= user.key %>">
+      <div class="profile-circle" id="<%= user.id %>">
         <%= new String(user.name).trim().charAt(0) %>
       </div>
 
@@ -20,7 +20,7 @@
         <div class="profile-options">
           <a href="/~">dashboard</a>
           <a href="#">resources</a>
-          <a href="/u/<%= user.key %>">profile</a>
+          <a href="/u/<%= user.id %>">profile</a>
           <a href="/logout" class="logout">logout</a>
         </div>
       </div>
